# crowd-pilot-serializer

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: conversation.rs  diff.rs  helpers.rs  lib.rs  pipeline.rs
crates/napi/: Cargo.toml  package.json
crates/napi/src/: lib.rs
