[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/napi",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/p-doom/crowd-pilot-serializer"

[workspace.dependencies]
regex = "1.10"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Embedded Python
pyo3 = { version = "0.20", features = ["auto-initialize"] }

crowd-pilot-serializer-core = { path = "crates/core" }

