[package]
name = "crowd-pilot-serialize"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for serializing crowd-pilot's IDE interaction data"

[[bin]]
name = "crowd-pilot-serialize"
path = "src/main.rs"

[dependencies]
crowd-pilot-serializer-core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.20", features = ["auto-initialize"] }
serde_json = { workspace = true }

