[package]
name = "crowd-pilot-serializer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core serialization logic for crowd-pilot's IDE interaction data"

[dependencies]
regex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = "1.3"
walkdir = "2.5"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.10"

