[package]
name = "crowd-pilot-serializer-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js bindings for crowd-pilot serializer"

[lib]
crate-type = ["cdylib"]

[dependencies]
crowd-pilot-serializer-core = { workspace = true }
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"

